# Closest_point_in_cloud

./: CMakeLists.txt  README.md  package.xml
ros/scripts/: minDistance_pc.cpp
